message GLOBAL_DATA {
	required string strProtoName = 1;
	required bytes byData = 2;
}
	
message C2G_GET_SERVER_LIST{
	
}
	
message C2G_HAND_SHAKE_REQUEST{
	required uint32	uPortocolID = 1[default = 0];
	required int32	nProtocolVersion = 2[default = 0];
	required int32	nGroupID = 3[default = 0];
	required int32	nNetType = 4[default = 0];
}
	
